force-app/main/default/objects/Apttus_Config2__PriceDimension__c/Apttus_Config2__PriceDimension__c.object-meta.xml
<CustomObject>
    <description>Represents a price criteria dimension</description>
    <label>Price Dimension</label>
    <nameField>
        <label>Dimension Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Price Dimensions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>