force-app/main/default/objects/Apttus_Config2__PriceDimension__c/fields/Apttus_Config2__AttributeId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__AttributeId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the product attribute which provides the value for the dimension.</description>
    <label>Attribute</label>
    <referenceTo>Apttus_Config2__ProductAttribute__c</referenceTo>
    <relationshipLabel>Price Dimensions</relationshipLabel>
    <relationshipName>PriceDimensions</relationshipName>
    <type>Lookup</type>
</CustomField>