force-app/main/default/objects/Apttus_Config2__PriceDimension__c/fields/Apttus_Config2__ChildFilterName__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ChildFilterName__c</fullName>
    <description>The name of the child filter associated with the price dimension</description>
    <inlineHelpText>The name of the child filter associated with the price dimension</inlineHelpText>
    <label>Child Filter Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>