force-app/main/default/objects/Apttus_Config2__PriceDimension__c/fields/Apttus_Config2__ContextType__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ContextType__c</fullName>
    <description>The type of context associated with the dimension</description>
    <label>Context Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Line Item</fullName>
            </value>
            <value>
                <fullName>Order Line Item</fullName>
            </value>
            <value>
                <fullName>Product Attribute</fullName>
            </value>
            <value>
                <fullName>Formula Field</fullName>
            </value>
            <value>
                <fullName>Order Formula Field</fullName>
            </value>
            <value>
                <fullName>Child Filter</fullName>
            </value>
            <value>
                <fullName>Order Child Filter</fullName>
            </value>
            <value>
                <fullName>External Order Summary Item</fullName>
            </value>
            <value>
                <fullName>External Order Formula Field</fullName>
            </value>
            <value>
                <fullName>External Order Child Filter</fullName>
            </value>
            <value>
                <fullName>Asset Line Item</fullName>
            </value>
            <value>
                <fullName>Asset Attribute</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>