force-app/main/default/objects/Apttus_Config2__PriceDimension__c/fields/Apttus_Config2__CumulativeDimensionId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__CumulativeDimensionId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the cumulative dimension associated with the dimension. Only applicable to numeric dimensions</description>
    <label>Cumulative Dimension</label>
    <referenceTo>Apttus_Config2__PriceDimension__c</referenceTo>
    <relationshipLabel>Related Dimensions</relationshipLabel>
    <relationshipName>RelatedDimensions</relationshipName>
    <type>Lookup</type>
</CustomField>