force-app/main/default/objects/Apttus_Config2__PriceDimension__c/fields/Apttus_Config2__Datasource__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__Datasource__c</fullName>
    <description>The data source which provides the value for the dimension.</description>
    <label>Field</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>