force-app/main/default/objects/Apttus_Config2__PriceDimension__c/listViews/Apttus_Config2__All.listView-meta.xml
<ListView>
    <fullName>Apttus_Config2__All</fullName>
    <columns>NAME</columns>
    <columns>Apttus_Config2__ContextType__c</columns>
    <columns>Apttus_Config2__BusinessObject__c</columns>
    <columns>Apttus_Config2__Datasource__c</columns>
    <columns>Apttus_Config2__Description__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Apttus_Config2__Type__c</columns>
    <columns>Apttus_Config2__AttributeId__c</columns>
    <columns>Apttus_Config2__RelationType__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>